CS109/Examples/wk08b-fstream/catfile.out
catfile: /error: No such file or directory
::::::::::::::::
in.data
::::::::::::::::
     1	total 74
     2	drwx------.  3 wmackey users  2048 May 29 12:42 .
     3	drwx------. 23 wmackey users  2048 May 29 12:05 ..
     4	-rw-------.  1 wmackey users 12288 May 29 12:42 .cpbytes.cpp.swp
     5	drwx------.  2 wmackey users  2048 May 29 12:42 RCS
     6	-rwx------.  1 wmackey users 54646 May 29 12:42 cpbytes
     7	-rw-------.  1 wmackey users  1539 May 29 12:42 cpbytes.cpp
     8	-rw-------.  1 wmackey users     0 May 29 12:42 in.data
::::::::::::::::
256
::::::::::::::::
     1	^@^A^B^C^D^E^F^G^H^I
     2	^K^L^M^N^O^P^Q^R^S^T^U^V^W^X^Y^Z^[^\^]^^^_
     3	 !"#$%&'()*+,-./0123456789:;<=>?
     4	@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_
     5	`abcdefghijklmnopqrstuvwxyz{|}~^?
     6	\x80\x81\x82\x83\x84\x85\x86\x87\x88\x89\x8A\x8B\x8C\x8D\x8E\x8F\x90\x91\x92\x93\x94\x95\x96\x97\x98\x99\x9A\x9B\x9C\x9D\x9E\x9F
     7	 ¡¢£¤¥¦§¨©ª«¬­®¯°±²³´µ¶·¸¹º»¼½¾¿
     8	ÀÁÂÃÄÅÆÇÈÉÊËÌÍÎÏĞÑÒÓÔÕÖ×ØÙÚÛÜİŞß
